--- a/Project-Recrutment/src/app/experience/experience.component.html
+++ b/Project-Recrutment/src/app/experience/experience.component.html
@@ -1,81 +1,55 @@
-<div class="container">
-  <h2>Experience Details</h2>
+<div class="col-md-6 mb-3">
+  <label for="companyName" class="form-label">Company Name</label>
+  <input type="text"
+         id="companyName"
+         class="form-control"
+         placeholder="Enter company name"
+         [(ngModel)]="experience.companyName"
+         name="companyName"
+         required>
+</div>
 
-  <!-- Input Form -->
-  <div class="form-container">
-    <h3>{{ isEditMode ? 'Update Experience' : 'Add New Experience' }}</h3>
-    
-    <form (ngSubmit)="onSubmit()">
-      
-      <div class="form-group">
-        <label>Company Name</label>
-        <input type="text" [(ngModel)]="experience.companyName" name="companyName" required class="form-control">
-      </div>
+<div class="col-md-6 mb-3">
+  <label for="designation" class="form-label">Designation</label>
+  <input type="text"
+         id="designation"
+         class="form-control"
+         placeholder="Enter designation"
+         [(ngModel)]="experience.designation"
+         name="designation"
+         required>
+</div>
 
-      <div class="form-group">
-        <label>Designation</label>
-        <input type="text" [(ngModel)]="experience.designation" name="designation" required class="form-control">
-      </div>
+<div class="col-md-6 mb-3">
+  <label for="startDate" class="form-label">Start Date</label>
+  <input type="date"
+         id="startDate"
+         class="form-control"
+         [(ngModel)]="experience.startDate"
+         name="startDate"
+         required>
+</div>
 
-      <div class="form-group">
-        <label>Start Date</label>
-        <input type="date" [(ngModel)]="experience.startDate" name="startDate" required class="form-control">
-      </div>
+<div class="col-md-6 mb-3">
+  <label for="endDate" class="form-label">End Date</label>
+  <input type="date"
+         id="endDate"
+         class="form-control"
+         [(ngModel)]="experience.endDate"
+         name="endDate"
+         [disabled]="experience.isCurrent">
+</div>
 
-      <div class="form-group">
-        <label>End Date</label>
-        <input type="date" 
-               [(ngModel)]="experience.endDate" 
-               name="endDate" 
-               [disabled]="experience.isCurrent" 
-               class="form-control">
-      </div>
-
-      <div class="form-group checkbox-group">
-        <input type="checkbox" [(ngModel)]="experience.isCurrent" (change)="onCurrentChange($event)" name="isCurrent" id="isCurrent">
-        <label for="isCurrent">Currently Working Here</label>
-      </div>
-
-      <div class="button-group">
-        <button type="submit" class="btn btn-save">
-          {{ isEditMode ? 'Update' : 'Save' }}
-        </button>
-        <button type="button" (click)="resetForm()" class="btn btn-reset" *ngIf="isEditMode">Cancel</button>
-      </div>
-
-    </form>
-  </div>
-
-  <!-- List Display -->
-  <div class="list-container">
-    <h3>Experience List</h3>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Company</th>
-          <th>Designation</th>
-          <th>Duration</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let exp of experienceList">
-          <td>{{ exp.companyName }}</td>
-          <td>{{ exp.designation }}</td>
-          <td>
-            {{ exp.startDate | date:'shortDate' }} - 
-            <span *ngIf="!exp.isCurrent">{{ exp.endDate | date:'shortDate' }}</span>
-            <span *ngIf="exp.isCurrent" class="badge-current">Current</span>
-          </td>
-          <td>
-            <button (click)="editRecord(exp)" class="btn btn-edit">Edit</button>
-            <button (click)="deleteRecord(exp.experienceId)" class="btn btn-delete">Delete</button>
-          </td>
-        </tr>
-        <tr *ngIf="experienceList.length === 0">
-          <td colspan="4" style="text-align: center;">No experience found.</td>
-        </tr>
-      </tbody>
-    </table>
+<div class="col-md-12 mb-3">
+  <div class="form-check form-switch">
+    <input class="form-check-input"
+           type="checkbox"
+           id="isCurrent"
+           [(ngModel)]="experience.isCurrent"
+           name="isCurrent"
+           (change)="onCurrentChange($event)">
+    <label class="form-check-label" for="isCurrent">
+      Currently Working Here
+    </label>
   </div>
 </div>
